
    https://github.com/petdance/html-lint/issues

Please DO NOT send bug reports to http://rt.cpan.org/.

2.21_01
    [ENHANCEMENTS]
    Added new error, elem-input-alt-missing, that warns of <input
    type="image"> tags that are missing an alt="" attribute.  This helps
    for accessability to make sure that any images have alternate text
    for screen readers.

    [FIXES]
    Test::HTML::Lint::html_ok() would not call the HTML::Lint eof()
    method, which allowed some invalid HTML to get by.

2.20    Fri Apr  6 00:49:51 CDT 2012
    [ENHANCEMENTS]
    Sometimes creating HTML::Lint-compliant HTML just isn't possible.
    Now, you can now turn individual errors on and off in your HTML
    via comment directives, like so:

        <!-- html-lint elem-img-sizes-missing: off, attr-unknown: off -->

    And if you have a batch of code that's hopeless:

        <!-- html-lint all: off -->

    Added check for unknown entities, such as "&foo;".

    Added check for unclosed entitities, such as "&amp" without the
    closing semicolon.

    Added a check for a bare ampersand that should be written as &amp;


2.10    Tue Dec  6 11:16:16 CST 2011
    [FIXES]
    Tags that were self-closed were being ignored.  For example, if you had

        <img src="blah.jpg" />

    then HTML::Lint would ignore the tag.  This has been fixed.

    [LICENSE]
    HTML::Lint is now explicitly licensed under Artistic License 2.0,
    instead of the vague "same terms as Perl itself."


2.06    Thu Dec 18 00:07:54 CST 2008
    [FIXES]
    Added attributes to <frameset>.

    <strong> tag didn't allow any attributes.  Now it does.

    Removed the <listing> tag.


2.04    Mon Jun  2 11:41:16 CDT 2008
    [FIXES]
    <textarea> now knows about the wrap attribute.

    [INTERNALS]
    Lots of enhancements pointed out by Perl::Critic.


2.02    Thu Nov  3 11:49:18 CST 2005
    [ENHANCEMENTS]
    * The warnings for missing ALT and HEIGHT/WIDTH on your images
        now give the SRC attribute.
